--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<!--
-    作者：LeeGene
--->
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -176,7 +173,7 @@
 				});
 				// 实现点击"?"文本就弹出提示声明
 				document.getElementsByClassName('about')[0].addEventListener('click',function(){
-					alert('生命:本站与百度公司没有任何联系，baidu以及本站出现的百度公司Logo是百度公司的商标。');
+					alert('生命:本站与微软公司没有任何联系，bing以及本站出现的必应Logo是微软公司的商标。');
 				});
 				if(variable){	// 判断有没有get传递的参数,有就进入动画效果,没有就保持不变
 					var arrow = document.getElementById('arrow');
